# iLovePPT

./: .gitignore  CLAUDE.md  LICENSE  README.md  USAGE.zh.md  pyproject.toml
.claude/: pipeline-protocol.md  settings.json
.claude/agents/: critic-rubric.yaml  iloveppt-audience.md  iloveppt-author.md  iloveppt-brainstorm.md  iloveppt-builder.md  iloveppt-critic.md  iloveppt-designer.md  iloveppt-research.md  iloveppt-self-check.md  iloveppt-template-extractor.md  iloveppt-yaml-fixer.md  iloveppt.md
.claude/hooks/: validate_agent_return.py
.githooks/: pre-commit
.github/workflows/: ci.yml
decks/: .gitignore
decks/claude-code-training/: STATUS.md  audience_review_r5.md  deck_plan.json  deck_v1_content.md  deck_v1_outline.md
docs/: MANUAL.zh.md  adding-new-layout.md  agent-internals.zh.md  agent-team-evaluation-checklist.zh.md  clip-chapter-howto.md  cost-budget.md  deck-diff-howto.md  gitignore-lint.md  mixed-language-rendering.md  template-extraction.md  writing-custom-themes.md
docs/archive/: 2026-05-22-iloveppt-v2-design.md  2026-05-22-iloveppt-v2.md  2026-05-23-iloveppt-agent-design.md  2026-05-23-iloveppt-agent.md  README.md  (+2 more)
evals/: README.md  rubric.md  run_eval.sh
scripts/: audit_pptx.py  check_source_fidelity.py  clip_chapter.py  compute_chapter_hashes.py  dashboard.py  deck_diff.py  derive_plan.py  fix_ea_fonts.py  gitignore_lint.py  install-hooks.sh  new_deck.py  p1_1_backfill_variants.py  query_cache.py  red_line_check.py  redact.py  t2i.py  track_cost.py
templates/: README.md  example.yaml
tests/: test_yaml_wellformed.py
(+139 files in other folders)
